Fix #8768.

- When invoking ProcessController's menu, we now only show the "Live in Deskbar"
  menu item if we're either running within Deskbar itself or from PC's standalone
  window. This allows replicant PC instances to be usable in the case where
  Deskbar is deadlocked for whatever reason (previously it would hang while trying
  to query for the deskbar item's presence/status).